--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ rpi-code/__pycache__
 instance-code/__pycache__
 sample.py
 chart1.png
-chart2.png
-chart3.png
-chart4.png
+ph.png
+tb.png
+do.png
+temp.png
